# idr-tools

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
idrs/: 202601031709-init.md  202601120049-add-python-packaging.md  202601172233-add-github-actions-ci.md  202601180308-upload-packages-to-pypi.md  202604070241-create-idr-skill.md
skills/idr/: SKILL.md
src/: default_template.md.jinja  git.rs  idr.rs  lib.rs  main.rs  utils.rs
