[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "idr-tools"
version = "0.2.0"
description = "Create Implementation Decision Records"
authors = [{ name = "Will Lachance", email = "wlach@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = ["maturin>=1.0,<2.0"]

[tool.maturin]
bindings = "bin"
strip = true
exclude = ["target/", ".github/", "*.pyc", "__pycache__/", "tests/__pycache__/"]
